--- a/index.html
+++ b/index.html
@@ -1,81 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet"> 
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="./responsive.css">
-<title>Webpage Recrreation</title>
+   <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="./responsive.css">
+      <title>Webpage Recrreation</title>
+   </head>
+   <body>
+    <!--NAVBAR section starts-->
+      <section class="navbar">
+         <img src="./images/logo-w.png" alt="Logo" />
+      </section>
+    <!--NAVBAR section ends-->
 
-</head>
-<body>
-    <section class="header">
-        <img src="./images/logo-w.png" alt="Logo" />
-        </section>
-        <section class="homepage">
-            <div class="container-top">
-                <div class="red-text">
-                    We design brand & digital experience
-                </div>
-                <div class="normal-text">
-                    Awesome & skilled Designers.
-                </div>
+    <!--HOMEPAGE section starts-->
+      <section class="homepage">
+    <!--TOP-CONTAINER starts-->
+         <div class="top-container">
+            <div class="red-text">
+               We design brand & digital experience
             </div>
-            <div class="container1">
-                <div class="left-container">
-                    <div class="container-logo">
-                        <img src="./images/bestQuality-logo.svg" alt="best-quality Logo" />
-                    </div>
-                    <div class="container-heading">
-                        Best Quality
-                    </div>
-                    <p class="container-text">Lorem Ipsum is simply text the printing and typesetting standard industry.</p>
-                </div>
-                <div class="left-container">
-                    <div class="container-logo">
-                        <img src="./images/responsibility-logo.png" alt="responsibility-Logo" />
-                    </div>
-                    <div class="container-heading">
-                        Responsibility
-                    </div>
-                    <p class="container-text">Lorem Ipsum is simply text the printing and typesetting standard industry.</p>
-                </div>
-            
-           
-                <div class="left-container">
-                    <div class="container-logo">
-                        <img src="./images/processing-logo.png" alt="processing-speed Logo" />
-                    </div>
-                    <div class="container-heading">
-                        Processing Speed
-                    </div>
-                    <p class="container-text">Lorem Ipsum is simply text the printing and typesetting standard industry.</p>
-                </div>
-                <div class="left-container">
-                    <div class="container-logo">
-                        <img src="./images/lowest-price-logo.png" alt="lowestPrice-Logo" />
-                    </div>
-                    <div class="container-heading">
-                        Lowest Prices
-                    </div>
-                    <p class="container-text">Lorem Ipsum is simply text the printing and typesetting standard industry.</p>
-                </div>
+            <div class="normal-text">
+               Awesome & skilled Designers.
             </div>
-        </section>
-        <section class="footer">
-            <p>
+         </div>
+    <!--TOP-CONTAINER ENDS-->
+    <!--GRID-CONTAINER starts-->
+         <div class="grid-outer-container">
+            <div class="grid-inner-container">
+               <div class="container-logo">
+                  <img src="./images/bestQuality-logo.svg" alt="best-quality Logo" />
+               </div>
+               <div class="container-heading">
+                  Best Quality
+               </div>
+               <p class="container-text">Lorem Ipsum is simply text the printing and typesetting standard industry.</p>
+            </div>
+            <div class="grid-inner-container">
+               <div class="container-logo">
+                  <img src="./images/responsibility-logo.png" alt="responsibility-Logo" />
+               </div>
+               <div class="container-heading">
+                  Responsibility
+               </div>
+               <p class="container-text">Lorem Ipsum is simply text the printing and typesetting standard industry.</p>
+            </div>
+            <div class="grid-inner-container">
+               <div class="container-logo">
+                  <img src="./images/processing-logo.png" alt="processing-speed Logo" />
+               </div>
+               <div class="container-heading">
+                  Processing Speed
+               </div>
+               <p class="container-text">Lorem Ipsum is simply text the printing and typesetting standard industry.</p>
+            </div>
+            <div class="grid-inner-container">
+               <div class="container-logo">
+                  <img src="./images/lowest-price-logo.png" alt="lowestPrice-Logo" />
+               </div>
+               <div class="container-heading">
+                  Lowest Prices
+               </div>
+               <p class="container-text">Lorem Ipsum is simply text the printing and typesetting standard industry.</p>
+            </div>
+         </div>
+    <!--GRID-CONTAINER ends-->
+      </section>
+    <!--HOMEPAGE section ends-->
+
+    <!--FOOTER section starts-->
+      <section class="footer">
+         <p>
             <a link="/">Website Templates</a> created  with <a link="/">Website Builder Software.</a>
-        </p>
-        </section>
-</body>
+         </p>
+      </section>
+    <!--FOOTER section ends-->
+   </body>
 </html>
-
-
-
-
-
-
